--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,14 @@
-SECRET_KEY=your-super-secret-key-change-in-production
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASS=your-app-password
+SECRET_KEY=dfhrgjh5568648uehjeu5655
+
+
+DATABASE_URL=sqlite:///instance/database.db
+
+# SMTP Settings for mail.ru
+MAIL_SERVER=smtp.mail.ru
+MAIL_PORT=465
+MAIL_USE_SSL=True
+MAIL_USERNAME=neurostat@bk.ru
+MAIL_PASSWORD=B2phNv14grrAzaeM6gRS
+
+MAIL_USE_TLS=False
+AIL_DEFAULT_SENDER=neurostat@bk.ru
